--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="theme-color" content="#00b894">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link href="https://api.pamiatki.karol.site" rel="preconnect" crossorigin>
+    <link href="https://api.pamiatki.kucza.xyz" rel="preconnect" crossorigin>
     <link href="https://storage.googleapis.com" rel="preconnect" crossorigin>
     <title>Pamiątki 🗽</title>
   </head>
